Swagger Web API update
