# swagger/model_diary_assign_details_attachments.go
@@ -8,7 +8,7 @@
  */
 package swagger
 
-type Attachment struct {
+type DiaryAssignDetailsAttachments struct {
 	Id               int32  `json:"id,omitempty"`
 	Name             string `json:"name,omitempty"`
 	OriginalFileName string `json:"originalFileName,omitempty"`
