# swagger/model_diary_assign_details_subject_group.go
@@ -8,7 +8,7 @@
  */
 package swagger
 
-type PrepareEmLoginFormCountries struct {
+type DiaryAssignDetailsSubjectGroup struct {
 	Id   int32  `json:"id,omitempty"`
 	Name string `json:"name,omitempty"`
 }
