# swagger/model_diary_assign_details_teacher.go
@@ -8,7 +8,7 @@
  */
 package swagger
 
-type PrepareEmLoginFormCountries struct {
+type DiaryAssignDetailsTeacher struct {
 	Id   int32  `json:"id,omitempty"`
 	Name string `json:"name,omitempty"`
 }
