# swagger/model_student_diary_init_students.go
@@ -1,0 +1,17 @@
+/*
+ * NetSchool
+ *
+ * The API for the NetSchool irTech project
+ *
+ * API version: 4.30.43656
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+package swagger
+
+type StudentDiaryInitStudents struct {
+	StudentId int32        `json:"studentId,omitempty"`
+	NickName  string       `json:"nickName,omitempty"`
+	ClassName *interface{} `json:"className,omitempty"`
+	ClassId   int32        `json:"classId,omitempty"`
+	IupGrade  int32        `json:"iupGrade,omitempty"`
+}
